--- a/home.html
+++ b/home.html
@@ -2,13 +2,53 @@
 
 <html>
   <head>
-    <title>INSERT TITLE HERE!</title>
+    <title>Brickway On Wickenden</title>
     <link rel="stylesheet" href="index.css">
     <!-- TODO: add additional links here! e.g. fonts, icons, more stylesheets, etc. -->
     <meta content="width=device-width, initial-scale=1" name="viewport" />
+    <style>
+    body {
+      /* background image */
+      background-image: url("banana copy2.jpg");
+      background-color: #cccccc;
+      background-repeat: no-repeat;
+      background-position: center center;
+      background-attachment: fixed;
+      height: 100%;
+      background-size: cover;
+
+
+
+    }
+    </style>
   </head>
 
   <body>
     <!-- TODO: put your HTML code here! -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+
+<div class="topnav" id="myTopnav">
+  <a href="file:///Users/issrasaid/Desktop/uiux/responsiveredesign/home.html#home" class="active">Home</a>
+  <a href="http://www.brickwayonwickenden.com/Menu.html">Menu</a>
+  <a href="http://www.brickwayonwickenden.com/Contact_Us.html">Contact</a>
+  <a href="https://www.instagram.com/brickwayonwickenden/">About</a>
+  <a href="javascript:void(0);" class="icon" onclick="myFunction()">
+    <i class="fa fa-bars"></i>
+  </a>
+</div>
+
+
+
+
+<div class="flex-container" style =margin-top:10>
+
+  <div class="flex-item">
+  <h1 style=font-size:80px; font-family:'Helvetica'> Brickway on Wickenden</h1>
+  </div>
+  <div class="flex-item"><b>Hours</b><br>Monday-Friday: 7 am - 3 pm<br>Saturday-Sunday: 8 am - 3 pm</div>
+  <div class="flex-item ">
+    <a href="http://www.brickwayonwickenden.com/Take_Out.html" class="btn responsive-width">Order Online</a>
+  </div>
+</div>
   </body>
 </html>
